Fix buttons' text vertical aligning

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,9 +36,10 @@ a {
     display: block;
     font-size: 0.8em;
     height: 32px;
-    line-height: 32px;
+    line-height: 30px;
     margin: 32px auto;
     max-width: 300px;
+    padding: 0;
     text-decoration: none;
     width: 300px;
 }
